# python-video-downloader

./: .gitignore  .pre-commit-config.yaml  .uv  CHANGELOG.md  README.md  downloader.py  loading.py  main.py  pyproject.toml  requirements.txt  styles.py  utils.py  video_info.py
.github/workflows/: build.yml
